bdr.BDR.scala.error
Erreur de compilation :
BDR:25: error: value update is not a member of String
} else if (litMessage()="X"){
           ^